Update the selector (line 2169) in opus.css to avoid selecting the extra space next to hints.

--- a/opus/application/static_media/css/opus.css
+++ b/opus/application/static_media/css/opus.css
@@ -2165,8 +2165,8 @@ ul.ui-autocomplete a.ui-state-active {
     user-select: none;
 }
 
-/* Allow users to mouse over and select text in widgets */
-.op-input ul li {
+/* Allow users to mouse over and select texts & hints in widgets */
+.op-input ul label, .op-input ul span {
     -ms-user-select: text;
     user-select: text;
     -moz-user-select: text;
